src/objects/Education__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Educations</relationshipLabel>
        <relationshipName>Educations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below SC</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>HSC</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s degree</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Institution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>